# a2_ros

./: .gitmodules  0.000000000.pcd  compose.yaml  detections.csv
docker/: Dockerfile.dev
environment/: Dockerfile.dev
maps/: dlio_map.pcdexit  global_map_test10.pcd  global_map_test12.pcd  global_map_test12_no_imu.pcd  global_map_test14_without_node.pcd  global_map_test19_without_saving_node.pcd  global_map_test8.pcd
scripts/: a2  build_workspace.sh  detection_postprocess.sh  object_logger.py  rectify_node.py  run_bag.sh  run_dev.sh  run_robot.sh  run_sim.sh  save_map.sh  setup_robot.sh
src/control/vel_publisher/: CMakeLists.txt  package.xml
src/control/vel_publisher/launch/: vel_publisher.launch.py
src/control/vel_publisher/scripts/: vel_publisher.py
src/meta_packages/a2_ros/: CMakeLists.txt  package.xml
src/meta_packages/a2_ros/config/autonomy/: tare_a2.yaml
src/meta_packages/a2_ros/launch/: dlio.launch.py  exploration.launch.py  exploration_home_return.launch.py  navigation.launch.py  nuc.launch.py  object_mapping_sim.launch.py  pc2.launch.py  sim.launch.py  teleop_joy.launch.py
src/meta_packages/a2_ros/rviz/: exploration.rviz
src/meta_packages/a2_ros/src/: home_return_mux.cpp  teleop_joy.cpp
src/scripts/: avoid_obstacles.py  go_to_point.py
