<?xml version="1.0"?>
<package format="3">
  <name>vel_publisher</name>
  <version>0.0.0</version>
  <description>Publishes velocity commands to nav_vel</description>
  <maintainer email="you@example.com">you</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <export><build_type>ament_cmake</build_type></export>
</package>
